Fix horizontal scrollbar in contact pg

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,6 +1,8 @@
 /* -page contact
 ================================ */
 #contact {
+  overflow-x: hidden;
+
   h2 {
     font-size: 3.5em;
     color: $contact-heading;
